frame/support/test/tests/construct_runtime_ui/invalid_module_details_keyword.stderr
error: expected one of: `Module`, `Call`, `Storage`, `Event`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`
 --> $DIR/invalid_module_details_keyword.rs:9:20
  |
9 |         system: System::{enum},
  |                          ^^^^
